Day 5: Cleaning, adding lambdas :)